--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "lucide-react": "^0.487.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.56.1",
     "react-i18next": "^15.4.1",
     "react-router-dom": "^7.5.0",
     "swiper": "^11.2.6",
