--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,14 +2,15 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
-COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
-
-# Install PostgreSQL client dependencies
+# Install PostgreSQL client dependencies first
 RUN apt-get update && \
     apt-get install -y postgresql-client libpq-dev gcc && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
+
+# Copy requirements and install Python dependencies
+COPY requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
 
