--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,11 @@
-fastapi
-uvicorn
-python-dotenv
-sqlmodel
+fastapi==0.95.0
+uvicorn==0.21.1
+sqlmodel==0.0.8
+pydantic==1.10.7
+python-jose==3.3.0
+passlib==1.7.4
+bcrypt==4.0.1
+python-multipart==0.0.6
+python-dotenv==1.0.0
+faker==18.3.1
 psycopg
-faker
