--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,17 @@
 # Database
-POSTGRES_PASSWORD=
-POSTGRES_USER=
-POSTGRES_DB=
+POSTGRES_PASSWORD=postgres
+POSTGRES_USER=postgres
+POSTGRES_DB=bookworm
 
 # Backend
-SECRET_KEY_PATH=
+SECRET_KEY=
+ALGORITHM=HS256
+ACCESS_TOKEN_EXPIRE_MINUTES=30
+REFRESH_TOKEN_EXPIRE_MINUTES=600
+COOKIE_SECURE=False  # Set to True in production when using HTTPS
 ENVIRONMENT=development
 SEED_ON_STARTUP=false
 OVERWRITE_DB=false
 
 # Frontend
-VITE_API_URL=http://localhost:8000/api/v1
+VITE_API_URL=http://localhost:8000
